#1680 FE: fix: tree expand icon overflow in IE and small resolution

--- a/Realization/frontend/czechidm-core/src/components/advanced/Tree/Tree.less
+++ b/Realization/frontend/czechidm-core/src/components/advanced/Tree/Tree.less
@@ -53,7 +53,6 @@
     }
 
     .expand-icon {
-      width: 12px;
       color: #7898b5;
       cursor: pointer;
       visibility: hidden;
